Added item to data structure

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <input type="text" placeholder="Add Calories" id="item-calories">
                         <label for="item-calories">Calories</label>
                     </div>
-                    <button class="add-btn btn magenta"><i class="fas fa-plus"></i> Add Meal</button>
+                    <button class="add-btn btn blue"><i class="fas fa-plus"></i> Add Meal</button>
                 </div>
             </form>
         </div>
