Added Update Meal nad Delete Meal button (no functionality)

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                         <label for="item-calories">Calories</label>
                     </div>
                     <button class="add-btn btn blue"><i class="fas fa-plus"></i> Add Meal</button>
+                    <button class="update-btn btn orange" style="display: none"><i class="far fa-edit"></i> Update Meal</button>
+                    <button class="delete-btn btn red" style="display: none"><i class="fas fa-times"></i> Delete Meal</button>
                 </div>
             </form>
         </div>
