--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <div class="container">
             <a href="#" class="brand-logo center">Track Calories</a>
         </div>
+        <ul class="right">
+            <li><a href="#!" class="btn blue lighten-2 clearAllBtn">CLEAR ALL</a></li>
+        </ul>
     </div>
 </nav>
 <br>
@@ -38,6 +41,7 @@
                     <button class="add-btn btn blue"><i class="fas fa-plus"></i> Add Meal</button>
                     <button class="update-btn btn orange"><i class="far fa-edit"></i> Update Meal</button>
                     <button class="delete-btn btn red"><i class="fas fa-times"></i> Delete Meal</button>
+                    <button class="back-btn btn #e0e0e0 grey"><i class="fas fa-chevron-circle-left"></i> Back</button>
                 </div>
             </form>
         </div>
